--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-inverse navbar-fixed-top">
 	<div class="navbar-inner">
 		<div>
-			<%= link_to "Lim-Trade Zwroty", returns_home_path, id: "logo" %>
+			<%= link_to "L&M TRADE", returns_home_path, id: "logo" %>
 			<nav>
 				<ul class="nav pull-right">
 					<li><%= link_to "Główna", root_path %></li>
