--- a/app/assets/stylesheets/prod_returns.css.scss
+++ b/app/assets/stylesheets/prod_returns.css.scss
@@ -1,11 +1,8 @@
 @import "color_pallette";
 
 .input-group {
-	float: right;
 	padding: 5px;
-	input {
-		height: 30px;
-	}
+	display: inline-block !important;
 	select {
 		width: 80px;
 	}
@@ -122,7 +119,7 @@ td {
 }
 .input-narrow {
 	input {
-		width: 30px !important;
+		/*width: 25px !important;*/
 	}
 }
 #check_action {
@@ -140,9 +137,6 @@ span .tools-group{
 
 .btn-toolbar {
 	margin: 0px !important;
-	input {
-		height: 25px !important;
-	}
 }
 .btn-wide {
 	width: 5em;
@@ -159,6 +153,7 @@ background-color:#ddd;
 	line-height: 1.0em !important;
 }
 .box {
+	margin-top: -20px;
 	padding-top: 100px;
 	background-color: #676469;
 }
