--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,7 +12,7 @@
 			<div class="span6"><div class="home_circles">
 				<%= link_to(products_path) do %>
 					<%= image_tag('circle_01.svg') %>
-					<div class="overlay_text_center">Zcinka</div>
+					<div class="overlay_text_center">Przycinka</div>
 				<% end %>
 			</div></div>
 			<div class="span6" id="sales">
