--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="fake-body container-fluid">
+  <div class="application-body container-fluid">
     <%= render 'layouts/header' %>
   
     <% flash.each do |key, value| %>
