--- a/app/views/layouts/_header_base.html.erb
+++ b/app/views/layouts/_header_base.html.erb
@@ -1,24 +1,12 @@
-<header class="navbar navbar-fixed-top">
-	<div class="navbar-inner navbar-base">
-		<div>
-			<%= link_to "L&M Trade", root_path, id: "logo" %>
-			<nav>
-				<ul class="nav pull-right">
-					<li><%= link_to "Główna", root_path %></li>
-					<% if signed_in? %>
-						<li id="fat-menu" class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Konto <b class="caret"></b></a>
-							<ul class="dropdown-menu">
-								<li><%= link_to "Uzytkownik", current_user %></li>
-								<li class="divider"></li>
-								<li><%= link_to "Wylogowanie", signout_path, method: "delete" %></li>
-							</ul>
-						</li>
-					<% else %>
-						<li><%= link_to "Sign in", signin_path %></li>
-					<% end %>
-				</ul>
-			</nav>
-		</div>
-	</div>
+<header class="">
+  <div class="row">
+    <%= link_to "L&M Trade GROUP", root_path, id: "logo-home" %>
+    <div class="pull-right">
+      <% if signed_in? %>
+          <%- link_to "Archiwum", prod_returns_archive_path %></li>
+        <%else%>
+          <%- link_to "Sign in", signin_path %></li>
+        <% end %>
+    </div>
+  </div>
 </header>
